# template

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: config.py  main.py  openapi.json
backend/app/database/: __init__.py  models.py  shared.py
backend/app/functions/: backups.py  email.py
backend/app/middleware/: auth.py  cors.py  errors.py  logging.py
backend/app/pages/: dashboard.py
backend/app/pages/auth/: login.py  logout.py  me.py  refresh.py  register.py  reset.py
backend/app/scripts/: export_openapi.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/layout/: navbar.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/auth/login/: index.tsx
frontend/src/routes/auth/register/: index.tsx
frontend/src/routes/auth/reset/: index.tsx
frontend/src/routes/dashboard/: index.tsx
frontend/src/styles/: globals.css
scripts/: setup.sh
